--- a/servicios.html
+++ b/servicios.html
@@ -102,13 +102,13 @@
             <a href="https://wa.me/573025292660?text=Hola,%20quiero%20diagnóstico%20de%20hardware">Solicitar</a>
           </div>
           <div class="servicio">
-            <p>Limpieza física básica</p>
+            <p>Limpieza física y logica</p>
             <span class="precio">$60.000 – $100.000</span>
-            <a href="https://wa.me/573025292660?text=Hola,%20quiero%20limpieza%20física%20de%20mi%20equipo">Solicitar</a>
+            <a href="https://wa.me/573025292660?text=Hola,%20quiero%20limpieza%20física%20y%20logica%20de%20mi%20equipo">Solicitar</a>
           </div>
           <div class="servicio">
-            <p>Cambio de piezas internas (mano de obra + repuestos)</p>
-            <span class="precio">$150.000 – $400.000</span>
+            <p>optimizacion de equipo + repuestos</p>
+            <span class="precio">$150.000</span>
             <a href="https://wa.me/573025292660?text=Hola,%20quiero%20reemplazar%20una%20pieza%20con%20repuestos">Solicitar</a>
           </div>
         </div>
@@ -139,3 +139,4 @@
 <a class="whatsapp" href="https://wa.me/573025292660?text=Hola%20ST%20Tecnolog%C3%ADa,%20necesito%20informaci%C3%B3n" target="_blank">💬</a>
 
 </body>
+
